--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -5,21 +5,52 @@
 }
 
 .posts {
-  max-width: 720px;
+  width: 100%;
   margin: 5rem auto 0;
 
-  & + a {
-    margin-top: 2rem;
-    padding-top: 2rem;
+  & + article {
+    margin-top: 3rem;
     border-top: 1px solid var(--gray-700);
+  }
+
+  h1 {
+    font-size: 1.75rem;
+    font-weight: 700;
+    letter-spacing: -0.5px;
+    margin-bottom: 0.5rem;
+    transition: color 0.2s;
+  }
+
+  &:hover h1 {
+    color: var(--hihglight);
   }
 
   p {
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 1rem;
   }
 
-  >div {
+  div {
     display: flex;
+
+    time {
+      margin-right: 1.5rem;
+      text-transform: capitalize;
+    }
+
+    time,
+    span {
+      display: flex;
+      align-items: center;
+      font-size: 0.875rem;
+      color: var(--body);
+
+      svg {
+        height: 1.25rem;
+        width: 1.25rem;
+        color: var(--body);
+        margin-right: 0.5rem;
+      }
+    }
   }
 }
