--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -1,55 +1,56 @@
-.container {
-  max-width: 764px;
-  margin: 0 auto;
-  padding: 0 2rem;
-}
-
 .posts {
-  width: 100%;
-  margin: 5rem auto 0;
+  margin-top:2em;
 
-  & + article {
-    margin-top: 3rem;
-    border-top: 1px solid var(--gray-700);
+  > a {
+    display:block;
   }
 
-  h1 {
-    font-size: 1.75rem;
-    font-weight: 700;
-    letter-spacing: -0.5px;
-    margin-bottom: 0.5rem;
+  a + a {
+    margin-top: 3rem;
+  }
+
+  button {
+    border:none;
+    background:transparent;
+    font-weight:600;
+    font-size: 1.125rem;
+    color:var(--hihglight);
+    margin-top:4rem;
+  }
+}
+
+.post {
+
+  strong {
+    font-size:1.75rem;
+    font-weight: bold;
+    color:var(--heading);
     transition: color 0.2s;
   }
 
-  &:hover h1 {
+  &:hover strong {
     color: var(--hihglight);
   }
 
-  p {
-    margin-top: 0.5rem;
-    margin-bottom: 1rem;
+  p{
+    margin-top:0.5rem;
+    font-size:1.125rem;
   }
 
-  div {
+  ul {
+    list-style: none;
+    margin-top:1.5rem;
     display: flex;
 
-    time {
-      margin-right: 1.5rem;
-      text-transform: capitalize;
-    }
+    & li {
+      font-size:0.875rem;
 
-    time,
-    span {
-      display: flex;
-      align-items: center;
-      font-size: 0.875rem;
-      color: var(--body);
-
-      svg {
-        height: 1.25rem;
-        width: 1.25rem;
-        color: var(--body);
+      & svg {
         margin-right: 0.5rem;
+      }
+
+      & + li {
+        margin-left: 1.625rem;
       }
     }
   }
